--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@zerodev/presets": "^5.1.2",
+    "@zerodev/sdk": "^5.0.9",
+    "@zerodev/session-key": "^5.0.2",
+    "alchemy-sdk": "^3.1.2",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
+    "ethers": "^6.8.0",
     "magic-sdk": "^21.5.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
@@ -23,10 +28,7 @@
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
-    "web3": "^4.0.2",
-    "@zerodev/sdk": "^5.0.9",
-    "@zerodev/presets": "^5.1.2",
-    "@zerodev/session-key": "^5.0.2"
+    "web3": "^4.0.2"
   },
   "devDependencies": {
     "eslint": "^8.45.0",
